src/sinks/snapshots/cdviz_collector__sinks__otel__tests__mapping@dev_cdevents_build_started_0_3_0.snap
---
source: src/sinks/otel.rs
expression: attributes(&cdevent)
---
- - cdevents.id
  - 271069a8-fc18-44f1-b38f-9d70a1695819
- - cdevents.type
  - dev.cdevents.build.started.0.3.0
- - cdevents.source
  - /event/source/123
- - cdevents.subject.id
  - build-1
- - cdevents.subject.source
  - /event/source/123
- - cdevents.subject.type
  - build
- - cdevents.predicate
  - started
