src/sinks/snapshots/cdviz_collector__sinks__otel__tests__mapping@dev_cdevents_pipelinerun_queued_0_3_0.snap
---
source: src/sinks/otel.rs
expression: attributes(&cdevent)
---
- - cdevents.id
  - 271069a8-fc18-44f1-b38f-9d70a1695819
- - cdevents.type
  - dev.cdevents.pipelinerun.queued.0.3.0
- - cdevents.source
  - /event/source/123
- - cdevents.subject.id
  - run-1
- - cdevents.subject.source
  - /event/source/123
- - cdevents.subject.type
  - pipelinerun
- - cdevents.predicate
  - queued
- - cicd.pipeline.name
  - build
- - cicd.pipeline.run.id
  - run-1
- - cicd.pipeline.run.url.full
  - "https://ci.example.com/run/1"
- - cicd.pipeline.run.state
  - pending
