src/sinks/snapshots/cdviz_collector__sinks__otel__tests__mapping@dev_cdevents_repository_created_0_3_0.snap
---
source: src/sinks/otel.rs
expression: attributes(&cdevent)
---
- - cdevents.id
  - 271069a8-fc18-44f1-b38f-9d70a1695819
- - cdevents.type
  - dev.cdevents.repository.created.0.3.0
- - cdevents.source
  - /event/source/123
- - cdevents.subject.id
  - repo-1
- - cdevents.subject.source
  - /event/source/123
- - cdevents.subject.type
  - repository
- - cdevents.predicate
  - created
- - vcs.repository.name
  - cdviz-collector
- - vcs.repository.url.full
  - "https://github.com/cdviz-dev/cdviz-collector"
- - vcs.owner.name
  - cdviz-dev
